--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
+    "mongoose": "^7.3.1",
     "next": "13.4.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ssl-checker": "^2.0.8",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.1.6"
   }
 }
