--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@mui/material": "^5.13.7",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "firebase": "^10.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "next": "13.4.8",
+    "node-cron": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "ssl-checker": "^2.0.8",
     "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "20.4.0",
+    "@types/node-cron": "^3.0.8",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "^10.4.14",
